before switching teams bug and making start/stop same button

--- a/public/controller.html
+++ b/public/controller.html
@@ -46,63 +46,66 @@
   </style>
 </head>
 <body>
-  <!-- <h1>Controller</h1> -->
-
-  <div style="margin-top: 20px;">
     <!-- <h2>Display Preview</h2> -->
     <div style="width: 30vw; height: 30vh; overflow: hidden; border: 1px solid #ccc; background: black;">
-      <iframe id="scoreboard-preview" src="scoreboard.html" style="width: 100vw; height: 100vh; border: 0; display: block; transform: scale(0.3); transform-origin: 0 0;"></iframe>
+        <iframe id="scoreboard-preview" src="scoreboard.html" style="width: 100vw; height: 100vh; border: 0; display: block; transform: scale(0.3); transform-origin: 0 0;"></iframe>
     </div>
-  </div>
+  
+    <div class="controls">
+        <div class="team">
+            <select id="team1-select" onchange="setTeam('team1')" 
+                style="font-size: 20px; font-weight: bold; padding: 10px; margin-bottom: 10px; border: 2px solid #ccc; border-radius: 5px; background: white;">
+                <option value="Grizzlies FC" data-color="maroon" selected>Grizzlies FC</option>
+                <option value="Sports Experts" data-color="white">Sports Experts</option>
+                <option value="Good Vibes FC" data-color="blue">Good Vibes FC</option>
+                <option value="Riverdale FC" data-color="green">Riverdale FC</option>
+            </select>
 
-  <div class="controls">
-    <div class="team">
-      <select id="team1-select" onchange="setTeam('team1')" style="font-size: 20px; font-weight: bold; padding: 10px; margin-bottom: 10px; border: 2px solid #ccc; border-radius: 5px; background: white;">
-        <option value="Grizzlies FC" data-color="maroon" selected>Grizzlies FC</option>
-        <option value="Sports Experts" data-color="white">Sports Experts</option>
-        <option value="Good Vibes FC" data-color="blue">Good Vibes FC</option>
-        <option value="Riverdale FC" data-color="green">Riverdale FC</option>
-      </select>
-      <div class="value">Score: <span id="team1-score">0</span></div>
-      <div class="value">Fouls: <span id="team1-fouls">0</span></div>
-      <button onclick="sendCommand('incScore', 'team1')">+ Score</button>
-      <button onclick="sendCommand('decScore', 'team1')">- Score</button>
-      <button onclick="sendCommand('incFoul', 'team1')">+ Foul</button>
-      <button onclick="sendCommand('decFoul', 'team1')">- Foul</button>
-    </div>
-    <div class="timer-controls">
-      <h2>Timer</h2>
-      <div class="value">Time: <span id="timer">20:00</span></div>
-      <div style="margin: 10px 0;">
-        <label for="timer-minutes">Min:</label>
-        <input type="number" id="timer-minutes" value="20" min="0" max="59" style="width: 60px; margin: 0 10px;">
-        <label for="timer-seconds">Sec:</label>
-        <input type="number" id="timer-seconds" value="0" min="0" max="59" style="width: 60px; margin: 0 10px;">
-        <button onclick="setTimerDuration()">Set Duration</button>  
-      </div>
-      <button onclick="sendCommand('startTimer')">Start</button>
-      <button onclick="sendCommand('stopTimer')">Stop</button>
-      <button onclick="sendCommand('resetTimer')">Reset</button>
-    </div>
-    <div class="team">
-      <select id="team2-select" onchange="setTeam('team2')" style="font-size: 20px; font-weight: bold; padding: 10px; margin-bottom: 10px; border: 2px solid #ccc; border-radius: 5px; background: white;">
-        <option value="Grizzlies FC" data-color="maroon">Grizzlies FC</option>
-        <option value="Sports Experts" data-color="white" selected>Sports Experts</option>
-        <option value="Good Vibes FC" data-color="blue">Good Vibes FC</option>
-        <option value="Riverdale FC" data-color="green">Riverdale FC</option>
-      </select>
-      <div class="value">Score: <span id="team2-score">0</span></div>
-      <div class="value">Fouls: <span id="team2-fouls">0</span></div>
-      <button onclick="sendCommand('incScore', 'team2')">+ Score</button>
-      <button onclick="sendCommand('decScore', 'team2')">- Score</button>
-      <button onclick="sendCommand('incFoul', 'team2')">+ Foul</button>
-      <button onclick="sendCommand('decFoul', 'team2')">- Foul</button>
-    </div>
+            <div class="value">Score: <span id="team1-score">0</span></div>
+            <div class="value">Fouls: <span id="team1-fouls">0</span></div>
 
-  </div>
+            <button onclick="sendCommand('incScore', 'team1')">+ Score</button>
+            <button onclick="sendCommand('decScore', 'team1')">- Score</button>
+            <button onclick="sendCommand('incFoul', 'team1')">+ Foul</button>
+            <button onclick="sendCommand('decFoul', 'team1')">- Foul</button>
+        </div>
+        
+        <div class="timer-controls">
+            <h2>Timer</h2>
+            <div class="value">Time: <span id="timer">20:00</span></div>
+            <div style="margin: 10px 0;">
+                <label for="timer-minutes">Min:</label>
+                <input type="number" id="timer-minutes" value="20" min="0" max="59" style="width: 60px; margin: 0 10px;">
+                <label for="timer-seconds">Sec:</label>
+                <input type="number" id="timer-seconds" value="0" min="0" max="59" style="width: 60px; margin: 0 10px;">
+                <button onclick="setTimerDuration()">Set Duration</button>  
+            </div>
+            <button onclick="sendCommand('startTimer')">Start</button>
+            <button onclick="sendCommand('stopTimer')">Stop</button>
+            <button onclick="sendCommand('resetTimer')">Reset</button>
+        </div>
+
+        <div class="team">
+            <select id="team2-select" onchange="setTeam('team2')" 
+            style="font-size: 20px; font-weight: bold; padding: 10px; margin-bottom: 10px; border: 2px solid #ccc; border-radius: 5px; background: white;">
+                <option value="Grizzlies FC" data-color="maroon">Grizzlies FC</option>
+                <option value="Sports Experts" data-color="white" selected>Sports Experts</option>
+                <option value="Good Vibes FC" data-color="blue">Good Vibes FC</option>
+                <option value="Riverdale FC" data-color="green">Riverdale FC</option>
+            </select>
+            <div class="value">Score: <span id="team2-score">0</span></div>
+            <div class="value">Fouls: <span id="team2-fouls">0</span></div>
+            <button onclick="sendCommand('incScore', 'team2')">+ Score</button>
+            <button onclick="sendCommand('decScore', 'team2')">- Score</button>
+            <button onclick="sendCommand('incFoul', 'team2')">+ Foul</button>
+            <button onclick="sendCommand('decFoul', 'team2')">- Foul</button>
+        </div>
+
+    </div>
 
   <div style="margin: 20px 0; text-align: center;">
     <button onclick="sendCommand('switchSides')" style="padding: 15px 30px; font-size: 18px; background-color: #ff6b6b; color: white; border: none; border-radius: 5px;">Switch Sides</button>
+    
   </div>
 
   <script src="client.js"></script>
